@@ -1,32 +1,27 @@
 package ua.com.fielden.platform.web.test.server;
 
 import static java.lang.String.format;
+import static org.apache.commons.lang3.StringUtils.isEmpty;
+import static org.apache.logging.log4j.LogManager.getLogger;
 
-import java.io.File;
 import java.io.FileInputStream;
-import java.io.IOException;
-import java.io.InputStream;
 import java.math.BigDecimal;
-import java.util.ArrayList;
 import java.util.Currency;
 import java.util.Date;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.Properties;
 import java.util.SortedSet;
 
-import org.apache.log4j.Logger;
-import org.apache.log4j.xml.DOMConfigurator;
-import org.codehaus.jackson.map.ObjectMapper;
+import org.apache.logging.log4j.Logger;
 import org.hibernate.dialect.Dialect;
 import org.hibernate.dialect.H2Dialect;
+import org.hibernate.dialect.PostgreSQL82Dialect;
 import org.joda.time.DateTime;
-import org.joda.time.format.DateTimeFormat;
 
 import fielden.test_app.close_leave.TgCloseLeaveExample;
 import ua.com.fielden.platform.algorithm.search.ISearchAlgorithm;
 import ua.com.fielden.platform.algorithm.search.bfs.BreadthFirstSearch;
+import ua.com.fielden.platform.basic.config.exceptions.ApplicationConfigurationException;
 import ua.com.fielden.platform.devdb_support.DomainDrivenDataPopulation;
 import ua.com.fielden.platform.devdb_support.SecurityTokenAssociator;
 import ua.com.fielden.platform.entity.AbstractEntity;
@@ -35,7 +30,6 @@ import ua.com.fielden.platform.persistence.HibernateUtil;
 import ua.com.fielden.platform.sample.domain.ITgPerson;
 import ua.com.fielden.platform.sample.domain.TgCollectionalSerialisationChild;
 import ua.com.fielden.platform.sample.domain.TgCollectionalSerialisationParent;
-import ua.com.fielden.platform.sample.domain.TgCoordinate;
 import ua.com.fielden.platform.sample.domain.TgEntityForColourMaster;
 import ua.com.fielden.platform.sample.domain.TgEntityWithPropertyDependency;
 import ua.com.fielden.platform.sample.domain.TgEntityWithPropertyDescriptor;
@@ -44,9 +38,6 @@ import ua.com.fielden.platform.sample.domain.TgFetchProviderTestEntity;
 import ua.com.fielden.platform.sample.domain.TgFuelType;
 import ua.com.fielden.platform.sample.domain.TgFuelUsage;
 import ua.com.fielden.platform.sample.domain.TgGeneratedEntity;
-import ua.com.fielden.platform.sample.domain.TgMachine;
-import ua.com.fielden.platform.sample.domain.TgMessage;
-import ua.com.fielden.platform.sample.domain.TgOrgUnit;
 import ua.com.fielden.platform.sample.domain.TgOrgUnit1;
 import ua.com.fielden.platform.sample.domain.TgOrgUnit2;
 import ua.com.fielden.platform.sample.domain.TgOrgUnit3;
@@ -56,7 +47,6 @@ import ua.com.fielden.platform.sample.domain.TgPersistentCompositeEntity;
 import ua.com.fielden.platform.sample.domain.TgPersistentEntityWithProperties;
 import ua.com.fielden.platform.sample.domain.TgPersistentStatus;
 import ua.com.fielden.platform.sample.domain.TgPerson;
-import ua.com.fielden.platform.sample.domain.TgPolygon;
 import ua.com.fielden.platform.sample.domain.TgVehicle;
 import ua.com.fielden.platform.sample.domain.TgVehicleMake;
 import ua.com.fielden.platform.sample.domain.TgVehicleModel;
@@ -92,7 +82,7 @@ import ua.com.fielden.platform.web.test.config.ApplicationDomain;
  *
  */
 public class PopulateDb extends DomainDrivenDataPopulation {
-    private static final Logger LOGGER = Logger.getLogger(PopulateDb.class);
+    private static final Logger LOGGER = getLogger(PopulateDb.class);
 
     private final ApplicationDomain applicationDomainProvider = new ApplicationDomain();
 
@@ -102,17 +92,47 @@ public class PopulateDb extends DomainDrivenDataPopulation {
 
     public static void main(final String[] args) throws Exception {
         LOGGER.info("Initialising...");
-        final String configFileName = args.length == 1 ? args[0] : "src/main/resources/application.properties";
-        final Properties props = new Properties();
+        final var props = new Properties();
+        final String propsFileSuffix; // is used to load either application-PostreSql.properties or application-SqlServer.properties
+        // Three system properties are required: databaseUri, databaseUser and databasePasswd.
+        final var databseUri = System.getProperty("databaseUri");
+        if (isEmpty(databseUri)) {
+            throw new ApplicationConfigurationException("Property 'databaseUri' is required.");
+        } else {
+            final String jdbcUri;
+            if (databseUri.contains("5432")) {
+                propsFileSuffix = "PostgreSql";
+                jdbcUri = "jdbc:postgresql:" + databseUri; 
+            } else {
+                propsFileSuffix = "SqlServer";
+                jdbcUri = "jdbc:sqlserver:" + databseUri; 
+ 
+            }
+            props.put("hibernate.connection.url", jdbcUri);
+        }
+        final var dbUser = System.getProperty("databaseUser");
+        if (isEmpty(dbUser)) {
+            throw new ApplicationConfigurationException("Property 'databaseUser' is required.");
+        } else {
+            props.put("hibernate.connection.username", dbUser);
+        }
+        final var dbPasswd = System.getProperty("databasePasswd");
+        if (isEmpty(dbPasswd)) {
+            throw new ApplicationConfigurationException("Property 'databasePasswd' is required.");
+        } else {
+            props.put("hibernate.connection.password", dbPasswd);
+        }
+        // Default application-PostreSql.properties and application-SqlServer.properties do not have any of the properties already assigned from system properties databaseUri, databaseUser and databasePasswd.
+        // However, if some alternative application.properties is provided, which contains those properties, the values from the file will get used.
+        final String configFileName = args.length == 1 ? args[0] : "src/main/resources/application-%s.properties".formatted(propsFileSuffix);
         try (final FileInputStream in = new FileInputStream(configFileName)) {
             props.load(in);
         }
-
-        DOMConfigurator.configure(props.getProperty("log4j"));
-
+        
+        
         LOGGER.info("Obtaining Hibernate dialect...");
         final Class<?> dialectType = Class.forName(props.getProperty("hibernate.dialect"));
-        final Dialect dialect = (Dialect) dialectType.newInstance();
+        final Dialect dialect = (Dialect) dialectType.getDeclaredConstructor().newInstance();
         LOGGER.info(format("Running with dialect %s...", dialect));
         final DataPopulationConfig config = new DataPopulationConfig(props);
         LOGGER.info("Generating DDL and running it against the target DB...");
@@ -120,9 +140,9 @@ public class PopulateDb extends DomainDrivenDataPopulation {
         // use TG DDL generation or
         // Hibernate DDL generation final List<String> createDdl = DbUtils.generateSchemaByHibernate()
         final List<String> createDdl = config.getDomainMetadata().generateDatabaseDdl(dialect);
-        final List<String> ddl = dialect instanceof H2Dialect ?
-                                 DbUtils.prependDropDdlForH2(createDdl) :
-                                 DbUtils.prependDropDdlForSqlServer(createDdl);
+        final List<String> ddl = dialect instanceof H2Dialect ?           DbUtils.prependDropDdlForH2(createDdl) :
+                                 dialect instanceof PostgreSQL82Dialect ? DbUtils.prependDropDdlForPostgresql(createDdl) :
+                                                                          DbUtils.prependDropDdlForSqlServer(createDdl);
         DbUtils.execSql(ddl, config.getInstance(HibernateUtil.class).getSessionFactory().getCurrentSession());
 
         final PopulateDb popDb = new PopulateDb(config, props);
@@ -249,129 +269,6 @@ public class PopulateDb extends DomainDrivenDataPopulation {
 
         final TgPersistentEntityWithProperties entWith0CompKeyToBeSaved = new_(TgPersistentEntityWithProperties.class, "KEY12").setStringProp("ok").setIntegerProp(43).setEntityProp(savedDefaultEntity).setBigDecimalProp(new BigDecimal(23).setScale(5)).setDateProp(new DateTime(960000L).toDate()).setBooleanProp(true).setCompositeProp(compWith0Saved).setDesc("Description for entity with key 12.").setRequiredValidatedProp(30);
         save(entWith0CompKeyToBeSaved);
-
-        LOGGER.info("\tPopulating messages...");
-        final Map<String, TgMachine> machines = new HashMap<>();
-        try {
-            final ClassLoader classLoader = getClass().getClassLoader();
-            final File file = new File(classLoader.getResource("gis/messageEntities.js").getFile());
-            final InputStream stream = new FileInputStream(file);
-            final ObjectMapper objectMapper = new ObjectMapper();
-            final ArrayList oldMessageEntities = objectMapper.readValue(stream, ArrayList.class);
-
-            for (final Object oldMessageEntity: oldMessageEntities) {
-                final Map<String, Object> map = (Map<String, Object>) oldMessageEntity;
-                final Map<String, Object> messageProps = ((Map<String, Object>) map.get("properties"));
-                final String machineKey = (String) ((Map<String, Object>) ((Map<String, Object>) messageProps.get("machine")).get("properties")).get("key");
-                TgMachine found = machines.get(machineKey);
-                if (found == null) {
-                    final TgMachine newMachine = new_(TgMachine.class, machineKey);
-                    newMachine.setDesc(machineKey + " desc");
-                    found = save(newMachine);
-                    machines.put(machineKey, found);
-                }
-                save(new_composite(TgMessage.class, found, DateTimeFormat.forPattern("yyyy-MM-dd HH:mm:ss.SSS").parseDateTime(((String) messageProps.get("gpsTime"))).toDate())
-                        .setX(BigDecimal.valueOf((double) messageProps.get("x")))
-                        .setY(BigDecimal.valueOf((double) messageProps.get("y")))
-                        .setVectorAngle((int) messageProps.get("vectorAngle"))
-                        .setVectorSpeed((int) messageProps.get("vectorSpeed"))
-                        // .setAltitude(223)
-                        // .setVisibleSattelites(2)
-                        .setDin1((boolean) messageProps.get("din1"))
-                        .setGpsPower((boolean) messageProps.get("gpsPower"))
-                        .setTravelledDistance(BigDecimal.valueOf((double) messageProps.get("travelledDistance")))
-                );
-            }
-        } catch (final IOException ex) {
-            throw new IllegalStateException(ex);
-        }
-
-        LOGGER.info("\tPopulating machines...");
-        try {
-            final ClassLoader classLoader = getClass().getClassLoader();
-            final File file = new File(classLoader.getResource("gis/realtimeMonitorEntities.js").getFile());
-            final InputStream stream = new FileInputStream(file);
-            final ObjectMapper objectMapper = new ObjectMapper();
-            final ArrayList oldMachineEntities = objectMapper.readValue(stream, ArrayList.class);
-
-            final Map<String, TgOrgUnit> orgUnits = new HashMap<>();
-            for (final Object oldMachineEntity: oldMachineEntities) {
-                final Map<String, Object> map = (Map<String, Object>) oldMachineEntity;
-                final Map<String, Object> machineProps = ((Map<String, Object>) map.get("properties"));
-                final String machineKey = (String) machineProps.get("key");
-                TgMachine found = machines.get(machineKey);
-                if (found == null) {
-                    final TgMachine newMachine = new_(TgMachine.class, machineKey);
-                    newMachine.setDesc((String) machineProps.get("desc"));
-                    final Object orgUnitObject = machineProps.get("orgUnit");
-                    if (orgUnitObject != null) {
-                        final String orgUnitKey = (String) ((Map<String, Object>) ((Map<String, Object>) orgUnitObject).get("properties")).get("key");
-                        TgOrgUnit foundOrgUnit = orgUnits.get(orgUnitKey);
-                        if (foundOrgUnit == null) {
-                            final TgOrgUnit newOrgUnit = new_(TgOrgUnit.class, orgUnitKey);
-                            newOrgUnit.setDesc((String) ((Map<String, Object>) ((Map<String, Object>) machineProps.get("orgUnit")).get("properties")).get("desc"));
-                            foundOrgUnit = save(newOrgUnit);
-                            orgUnits.put(orgUnitKey, foundOrgUnit);
-                        }
-                        newMachine.setOrgUnit(foundOrgUnit);
-                    }
-                    found = save(newMachine);
-                    machines.put(machineKey, found);
-                }
-                final Object lastMessageObject = machineProps.get("lastMessage");
-                if (lastMessageObject != null) {
-                    final Map<String, Object> lastMessageProps = (Map<String, Object>) ((Map<String, Object>) lastMessageObject).get("properties");
-
-                    save(new_composite(TgMessage.class, found, DateTimeFormat.forPattern("yyyy-MM-dd HH:mm:ss.SSS").parseDateTime(((String) lastMessageProps.get("gpsTime"))).toDate())
-                            .setX(BigDecimal.valueOf((double) lastMessageProps.get("x")))
-                            .setY(BigDecimal.valueOf((double) lastMessageProps.get("y")))
-                            .setVectorAngle((int) lastMessageProps.get("vectorAngle"))
-                            .setVectorSpeed((int) lastMessageProps.get("vectorSpeed"))
-                            // .setAltitude(223)
-                            // .setVisibleSattelites(2)
-                            .setDin1((boolean) lastMessageProps.get("din1"))
-                            .setGpsPower((boolean) lastMessageProps.get("gpsPower"))
-                            .setTravelledDistance(BigDecimal.valueOf(15.5)) // lastMessageProps.get("travelledDistance")
-                    );
-                }
-            }
-        } catch (final IOException ex) {
-            throw new IllegalStateException(ex);
-        }
-
-        LOGGER.info("\tPopulating geozones...");
-        try {
-            final ClassLoader classLoader = getClass().getClassLoader();
-            final File file = new File(classLoader.getResource("gis/polygonEntities.js").getFile());
-            final InputStream stream = new FileInputStream(file);
-            final ObjectMapper objectMapper = new ObjectMapper();
-            final ArrayList oldPolygonEntities = objectMapper.readValue(stream, ArrayList.class);
-
-            final Map<String, TgPolygon> polygons = new HashMap<>();
-            for (final Object oldPolygonEntity: oldPolygonEntities) {
-                final Map<String, Object> map = (Map<String, Object>) oldPolygonEntity;
-                final Map<String, Object> polygonProps = ((Map<String, Object>) map.get("properties"));
-                final String polygonKey = (String) polygonProps.get("key");
-                TgPolygon found = polygons.get(polygonKey);
-                if (found == null) {
-                    final TgPolygon newPolygon = new_(TgPolygon.class, polygonKey);
-                    newPolygon.setDesc((String) polygonProps.get("desc"));
-                    found = save(newPolygon);
-                    polygons.put(polygonKey, found);
-                }
-
-                final ArrayList<Object> coordinates = (ArrayList<Object>) polygonProps.get("coordinates");
-                for (final Object coord: coordinates) {
-                    final Map<String, Object> coordProps = ((Map<String, Object>) ((Map<String, Object>) coord).get("properties"));
-                    save(new_composite(TgCoordinate.class, found, (Integer) coordProps.get("order"))
-                            .setLongitude(BigDecimal.valueOf((double) coordProps.get("longitude")))
-                            .setLatitude(BigDecimal.valueOf((double) coordProps.get("latitude")))
-                    );
-                }
-            }
-        } catch (final IOException ex) {
-            throw new IllegalStateException(ex);
-        }
 
         final User _demo2 = co$(User.class).save(new_(User.class, "DEMO2").setBasedOnUser(su).setEmail("DEMO2@demoapp.com").setActive(true));
         final User demo2 = coUser.resetPasswd(_demo2, _demo2.getKey()).getKey();
